Style components and fix alignment

--- a/src/components/ForgotPassword/ForgotPassword.module.css
+++ b/src/components/ForgotPassword/ForgotPassword.module.css
@@ -1,9 +1,6 @@
-.forgot-password-title {
-  margin: 1em 0 0 1em;
-}
-
 .forgot-password-form {
   margin: 5em;
+  max-width: 20em;
 }
 
 .forgot-password-label {
@@ -12,4 +9,13 @@
 
 .forgot-password-button {
   margin: 1em 0 0 0;
+}
+
+.confirmation-msg {
+  max-width: 20em;
+}
+
+.login-link {
+  margin-top: 1em;
+  display: block;
 }
