--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -1,7 +1,3 @@
-.register-title {
-  margin: 1em 0 0 1em;
-}
-
 .register-form {
   margin: 5em;
   max-width: 20em;
@@ -12,7 +8,7 @@
 }
 
 .register-button {
-  margin: 2em 0 0 0;
+  margin: 1em 0 0 0;
 }
 
 .error-box {
