--- a/src/components/ResetPassword/ResetPassword.module.css
+++ b/src/components/ResetPassword/ResetPassword.module.css
@@ -1,9 +1,6 @@
-.reset-password-title {
-  margin: 1em 0 0 1em;
-}
-
 .reset-password-form {
   margin: 5em;
+  max-width: 20em;
 }
 
 .reset-password-label {
